[gd_scene load_steps=9 format=3 uid="uid://7tuna6ppfflo"]

[ext_resource type="Texture2D" uid="uid://c37wmqt683bx4" path="res://Assets/Sprites/PlayingCardFront.png" id="1_8rgxn"]
[ext_resource type="Script" path="res://Scripts/Components/Card.gd" id="2_g67aj"]
[ext_resource type="Texture2D" uid="uid://bupiqgllx1n5l" path="res://Assets/Icons/Icon_Action_Solid.png" id="3_ddi7b"]
[ext_resource type="Texture2D" uid="uid://dij8uawbjmcht" path="res://Assets/Icons/Icon_Reaction_Solid.png" id="4_iwe4c"]
[ext_resource type="Script" path="res://Scripts/Components/CardSM.gd" id="5_4capn"]
[ext_resource type="Script" path="res://Scripts/Components/CardStates/HandState.gd" id="6_byswx"]
[ext_resource type="Script" path="res://Scripts/Components/CardStates/AimState.gd" id="8_1q3l3"]
[ext_resource type="Script" path="res://Scripts/Components/CardStates/PlayState.gd" id="9_atfor"]

[node name="Card" type="TextureRect" node_paths=PackedStringArray("StateMachine", "CardEffects", "CardImageTR", "CardNameLabel", "AttackLabel", "DefenseLabel")]
self_modulate = Color(0.153778, 0.153778, 0.153778, 1)
custom_minimum_size = Vector2(250, 350)
anchors_preset = -1
anchor_right = 0.130208
anchor_bottom = 0.324074
offset_right = -210.0
offset_bottom = -310.0
texture = ExtResource("1_8rgxn")
expand_mode = 3
stretch_mode = 5
script = ExtResource("2_g67aj")
StateMachine = NodePath("CardStateMachine")
CardEffects = NodePath("CardEffects")
CardImageTR = NodePath("MarginContainer/VBoxContainer/Card Image")
CardNameLabel = NodePath("MarginContainer/VBoxContainer/Card Name")
AttackLabel = NodePath("MarginContainer/VBoxContainer/MarginContainer/TextureRect/Attack")
DefenseLabel = NodePath("MarginContainer/VBoxContainer/MarginContainer/TextureRect2/Defense")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Card Image" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 4

[node name="Card Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_ddi7b")
expand_mode = 5
stretch_mode = 5

[node name="Attack" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/TextureRect"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -11.5
offset_right = 55.0
offset_bottom = 11.5
grow_vertical = 2
text = "5
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("4_iwe4c")
expand_mode = 5
stretch_mode = 5

[node name="Defense" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/TextureRect2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -11.5
offset_right = -35.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "5
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("Owner")]
script = ExtResource("5_4capn")
Owner = NodePath("..")

[node name="HandState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_byswx")

[node name="AimState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_1q3l3")
State = 1

[node name="PlayState" type="Node" parent="CardStateMachine"]
script = ExtResource("9_atfor")
State = 2

[node name="CardEffects" type="Node" parent="."]

[connection signal="gui_input" from="." to="." method="Input"]
[connection signal="mouse_entered" from="." to="." method="MouseEnter"]
[connection signal="mouse_exited" from="." to="." method="MouseExit"]
